--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -15,6 +15,7 @@
 @import './Views/Drawers/Notifications';
 @import './Views/Drawers/Stats';
 @import './Views/Drawers/Controls';
+@import './Views/Drawers/QuestLog';
 
 @import './Views/Modals/Modal';
 @import './Views/Modals/VATReportingTool';
