--- a/src/Style/Views/Drawers/Notifications.scss
+++ b/src/Style/Views/Drawers/Notifications.scss
@@ -2,7 +2,7 @@
     overflow-y: auto;
     padding: 1rem;
     flex-grow: 1;
-    width: 20rem;
+    width: 26rem;
 
     &__entry {
         border-radius: 0.2rem;
@@ -49,13 +49,18 @@
             z-index: 1;
         }
 
-        &.warning {
+        &.yellow {
             background-color: yellow;
             color: black;
         }
 
-        &.alert {
+        &.red {
             background-color: red;
+            color: white;
+        }
+        
+        &.blue {
+            background-color: lightblue;
             color: white;
         }
     }
