--- a/src/Style/Views/Drawers/Timeline.scss
+++ b/src/Style/Views/Drawers/Timeline.scss
@@ -117,7 +117,7 @@
                 
                 &.yellow {
                     background-color: gold;
-                    color: black;
+                    color: sienna;
 
                     &:after {
                        border-top-color: gold;
@@ -126,7 +126,7 @@
                 
                 &.blue {
                     background-color: dodgerblue;
-                    color: black;
+                    color: powderblue;
 
                     &:after {
                        border-top-color: dodgerblue;
