--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -18,6 +18,7 @@
 @import './Views/Drawers/QuestLog';
 
 @import './Views/Modals/Modal';
+@import './Views/Modals/Message';
 @import './Views/Modals/VATReportingTool';
 
 @import './Views/Charts/PieChart';
