--- a/src/Style/Views/Drawers/Notifications.scss
+++ b/src/Style/Views/Drawers/Notifications.scss
@@ -1,5 +1,5 @@
 .drawer--notifications {
-    overflow-y: auto;
+    overflow: hidden;
     padding: 1rem;
     flex-grow: 1;
     width: 26rem;
@@ -11,6 +11,7 @@
         background-color: rgba(0, 0, 0, 0.3);
         color: lightgrey;
         transition: transform 0.5s ease;
+        border: 2px solid rgba(0, 0, 0, 0.3);
 
         &:not(:last-of-type) {
             margin-bottom: 1rem;
@@ -18,6 +19,16 @@
 
         &.out {
             transform: translateX(150%);
+        }
+
+        &.expired {
+            @keyframes drawer--notifications__entry-expired {
+                0% {  border-color: rgba(255, 0, 0, 1); }
+                100% {  border-color: rgba(255, 0, 0, 0.3); }
+            }
+
+            border-color: rgba(255, 0, 0, 1);
+            animation: drawer--notifications__entry-expired 1s linear infinite;
         }
 
         &__progress {
