--- a/src/Style/Views/Drawers/QuestLog.scss
+++ b/src/Style/Views/Drawers/QuestLog.scss
@@ -7,6 +7,7 @@
 
     &__quest {
         border-radius: 0.2rem;
+        border: 2px solid white;
         padding: 1rem;
         position: relative;
         background-color: rgba(0, 0, 0, 0.3);
