--- a/src/Style/Views/Pages/Session.scss
+++ b/src/Style/Views/Pages/Session.scss
@@ -22,6 +22,13 @@
         }
     }
 
+    &__start-tutorial {
+        position: fixed;
+        top: 1rem;
+        right: 1rem;
+        z-index: 20;
+    }
+
     &__panel {
         background-color: dimgrey;
         color: lightgrey;
