--- a/src/Style/Views/Widgets/Button.scss
+++ b/src/Style/Views/Widgets/Button.scss
@@ -15,12 +15,23 @@
     border: 1px solid darkgrey;
     color: dimgrey;
 
+    &:hover {
+        color: white;
+    }
+
     &[disabled] {
         opacity: 0.75;
         pointer-events: none;
     }
 
-    &.small {
+    &.round {
+        border-radius: 50%;
+        width: 2rem;
+        padding: 0;
+        height: 2rem;
+    }
+
+    &.round, &.small {
         min-width: 0;
         max-width: 2rem;
     }
