--- a/src/Style/Views/Modals/Message.scss
+++ b/src/Style/Views/Modals/Message.scss
@@ -74,7 +74,7 @@
             }
             
             &.align-right {
-                transform: translateX(-100%);
+                transform: translateX(calc(-100% + 1rem));
                 
                 &:after {
                     left: auto;
