--- a/css/app.css
+++ b/css/app.css
@@ -1098,6 +1098,10 @@ h1, h2, h3, h4, h5, h6 {
     width: 100px;
     background-size: 100% auto;
     background-image: url("../img/coin.png"); }
+  .coin-stack__coins {
+    position: absolute;
+    bottom: 0;
+    left: calc(50% - 50px); }
   .coin-stack__stack {
     height: 100%;
     position: absolute;
@@ -1105,406 +1109,6 @@ h1, h2, h3, h4, h5, h6 {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%); }
-    .coin-stack__stack:nth-child(1) {
-      z-index: 199; }
-    .coin-stack__stack:nth-child(2) {
-      z-index: 198; }
-    .coin-stack__stack:nth-child(3) {
-      z-index: 197; }
-    .coin-stack__stack:nth-child(4) {
-      z-index: 196; }
-    .coin-stack__stack:nth-child(5) {
-      z-index: 195; }
-    .coin-stack__stack:nth-child(6) {
-      z-index: 194; }
-    .coin-stack__stack:nth-child(7) {
-      z-index: 193; }
-    .coin-stack__stack:nth-child(8) {
-      z-index: 192; }
-    .coin-stack__stack:nth-child(9) {
-      z-index: 191; }
-    .coin-stack__stack:nth-child(10) {
-      z-index: 190; }
-    .coin-stack__stack:nth-child(11) {
-      z-index: 189; }
-    .coin-stack__stack:nth-child(12) {
-      z-index: 188; }
-    .coin-stack__stack:nth-child(13) {
-      z-index: 187; }
-    .coin-stack__stack:nth-child(14) {
-      z-index: 186; }
-    .coin-stack__stack:nth-child(15) {
-      z-index: 185; }
-    .coin-stack__stack:nth-child(16) {
-      z-index: 184; }
-    .coin-stack__stack:nth-child(17) {
-      z-index: 183; }
-    .coin-stack__stack:nth-child(18) {
-      z-index: 182; }
-    .coin-stack__stack:nth-child(19) {
-      z-index: 181; }
-    .coin-stack__stack:nth-child(20) {
-      z-index: 180; }
-    .coin-stack__stack:nth-child(21) {
-      z-index: 179; }
-    .coin-stack__stack:nth-child(22) {
-      z-index: 178; }
-    .coin-stack__stack:nth-child(23) {
-      z-index: 177; }
-    .coin-stack__stack:nth-child(24) {
-      z-index: 176; }
-    .coin-stack__stack:nth-child(25) {
-      z-index: 175; }
-    .coin-stack__stack:nth-child(26) {
-      z-index: 174; }
-    .coin-stack__stack:nth-child(27) {
-      z-index: 173; }
-    .coin-stack__stack:nth-child(28) {
-      z-index: 172; }
-    .coin-stack__stack:nth-child(29) {
-      z-index: 171; }
-    .coin-stack__stack:nth-child(30) {
-      z-index: 170; }
-    .coin-stack__stack:nth-child(31) {
-      z-index: 169; }
-    .coin-stack__stack:nth-child(32) {
-      z-index: 168; }
-    .coin-stack__stack:nth-child(33) {
-      z-index: 167; }
-    .coin-stack__stack:nth-child(34) {
-      z-index: 166; }
-    .coin-stack__stack:nth-child(35) {
-      z-index: 165; }
-    .coin-stack__stack:nth-child(36) {
-      z-index: 164; }
-    .coin-stack__stack:nth-child(37) {
-      z-index: 163; }
-    .coin-stack__stack:nth-child(38) {
-      z-index: 162; }
-    .coin-stack__stack:nth-child(39) {
-      z-index: 161; }
-    .coin-stack__stack:nth-child(40) {
-      z-index: 160; }
-    .coin-stack__stack:nth-child(41) {
-      z-index: 159; }
-    .coin-stack__stack:nth-child(42) {
-      z-index: 158; }
-    .coin-stack__stack:nth-child(43) {
-      z-index: 157; }
-    .coin-stack__stack:nth-child(44) {
-      z-index: 156; }
-    .coin-stack__stack:nth-child(45) {
-      z-index: 155; }
-    .coin-stack__stack:nth-child(46) {
-      z-index: 154; }
-    .coin-stack__stack:nth-child(47) {
-      z-index: 153; }
-    .coin-stack__stack:nth-child(48) {
-      z-index: 152; }
-    .coin-stack__stack:nth-child(49) {
-      z-index: 151; }
-    .coin-stack__stack:nth-child(50) {
-      z-index: 150; }
-    .coin-stack__stack:nth-child(51) {
-      z-index: 149; }
-    .coin-stack__stack:nth-child(52) {
-      z-index: 148; }
-    .coin-stack__stack:nth-child(53) {
-      z-index: 147; }
-    .coin-stack__stack:nth-child(54) {
-      z-index: 146; }
-    .coin-stack__stack:nth-child(55) {
-      z-index: 145; }
-    .coin-stack__stack:nth-child(56) {
-      z-index: 144; }
-    .coin-stack__stack:nth-child(57) {
-      z-index: 143; }
-    .coin-stack__stack:nth-child(58) {
-      z-index: 142; }
-    .coin-stack__stack:nth-child(59) {
-      z-index: 141; }
-    .coin-stack__stack:nth-child(60) {
-      z-index: 140; }
-    .coin-stack__stack:nth-child(61) {
-      z-index: 139; }
-    .coin-stack__stack:nth-child(62) {
-      z-index: 138; }
-    .coin-stack__stack:nth-child(63) {
-      z-index: 137; }
-    .coin-stack__stack:nth-child(64) {
-      z-index: 136; }
-    .coin-stack__stack:nth-child(65) {
-      z-index: 135; }
-    .coin-stack__stack:nth-child(66) {
-      z-index: 134; }
-    .coin-stack__stack:nth-child(67) {
-      z-index: 133; }
-    .coin-stack__stack:nth-child(68) {
-      z-index: 132; }
-    .coin-stack__stack:nth-child(69) {
-      z-index: 131; }
-    .coin-stack__stack:nth-child(70) {
-      z-index: 130; }
-    .coin-stack__stack:nth-child(71) {
-      z-index: 129; }
-    .coin-stack__stack:nth-child(72) {
-      z-index: 128; }
-    .coin-stack__stack:nth-child(73) {
-      z-index: 127; }
-    .coin-stack__stack:nth-child(74) {
-      z-index: 126; }
-    .coin-stack__stack:nth-child(75) {
-      z-index: 125; }
-    .coin-stack__stack:nth-child(76) {
-      z-index: 124; }
-    .coin-stack__stack:nth-child(77) {
-      z-index: 123; }
-    .coin-stack__stack:nth-child(78) {
-      z-index: 122; }
-    .coin-stack__stack:nth-child(79) {
-      z-index: 121; }
-    .coin-stack__stack:nth-child(80) {
-      z-index: 120; }
-    .coin-stack__stack:nth-child(81) {
-      z-index: 119; }
-    .coin-stack__stack:nth-child(82) {
-      z-index: 118; }
-    .coin-stack__stack:nth-child(83) {
-      z-index: 117; }
-    .coin-stack__stack:nth-child(84) {
-      z-index: 116; }
-    .coin-stack__stack:nth-child(85) {
-      z-index: 115; }
-    .coin-stack__stack:nth-child(86) {
-      z-index: 114; }
-    .coin-stack__stack:nth-child(87) {
-      z-index: 113; }
-    .coin-stack__stack:nth-child(88) {
-      z-index: 112; }
-    .coin-stack__stack:nth-child(89) {
-      z-index: 111; }
-    .coin-stack__stack:nth-child(90) {
-      z-index: 110; }
-    .coin-stack__stack:nth-child(91) {
-      z-index: 109; }
-    .coin-stack__stack:nth-child(92) {
-      z-index: 108; }
-    .coin-stack__stack:nth-child(93) {
-      z-index: 107; }
-    .coin-stack__stack:nth-child(94) {
-      z-index: 106; }
-    .coin-stack__stack:nth-child(95) {
-      z-index: 105; }
-    .coin-stack__stack:nth-child(96) {
-      z-index: 104; }
-    .coin-stack__stack:nth-child(97) {
-      z-index: 103; }
-    .coin-stack__stack:nth-child(98) {
-      z-index: 102; }
-    .coin-stack__stack:nth-child(99) {
-      z-index: 101; }
-    .coin-stack__stack:nth-child(100) {
-      z-index: 100; }
-    .coin-stack__stack:nth-child(101) {
-      z-index: 99; }
-    .coin-stack__stack:nth-child(102) {
-      z-index: 98; }
-    .coin-stack__stack:nth-child(103) {
-      z-index: 97; }
-    .coin-stack__stack:nth-child(104) {
-      z-index: 96; }
-    .coin-stack__stack:nth-child(105) {
-      z-index: 95; }
-    .coin-stack__stack:nth-child(106) {
-      z-index: 94; }
-    .coin-stack__stack:nth-child(107) {
-      z-index: 93; }
-    .coin-stack__stack:nth-child(108) {
-      z-index: 92; }
-    .coin-stack__stack:nth-child(109) {
-      z-index: 91; }
-    .coin-stack__stack:nth-child(110) {
-      z-index: 90; }
-    .coin-stack__stack:nth-child(111) {
-      z-index: 89; }
-    .coin-stack__stack:nth-child(112) {
-      z-index: 88; }
-    .coin-stack__stack:nth-child(113) {
-      z-index: 87; }
-    .coin-stack__stack:nth-child(114) {
-      z-index: 86; }
-    .coin-stack__stack:nth-child(115) {
-      z-index: 85; }
-    .coin-stack__stack:nth-child(116) {
-      z-index: 84; }
-    .coin-stack__stack:nth-child(117) {
-      z-index: 83; }
-    .coin-stack__stack:nth-child(118) {
-      z-index: 82; }
-    .coin-stack__stack:nth-child(119) {
-      z-index: 81; }
-    .coin-stack__stack:nth-child(120) {
-      z-index: 80; }
-    .coin-stack__stack:nth-child(121) {
-      z-index: 79; }
-    .coin-stack__stack:nth-child(122) {
-      z-index: 78; }
-    .coin-stack__stack:nth-child(123) {
-      z-index: 77; }
-    .coin-stack__stack:nth-child(124) {
-      z-index: 76; }
-    .coin-stack__stack:nth-child(125) {
-      z-index: 75; }
-    .coin-stack__stack:nth-child(126) {
-      z-index: 74; }
-    .coin-stack__stack:nth-child(127) {
-      z-index: 73; }
-    .coin-stack__stack:nth-child(128) {
-      z-index: 72; }
-    .coin-stack__stack:nth-child(129) {
-      z-index: 71; }
-    .coin-stack__stack:nth-child(130) {
-      z-index: 70; }
-    .coin-stack__stack:nth-child(131) {
-      z-index: 69; }
-    .coin-stack__stack:nth-child(132) {
-      z-index: 68; }
-    .coin-stack__stack:nth-child(133) {
-      z-index: 67; }
-    .coin-stack__stack:nth-child(134) {
-      z-index: 66; }
-    .coin-stack__stack:nth-child(135) {
-      z-index: 65; }
-    .coin-stack__stack:nth-child(136) {
-      z-index: 64; }
-    .coin-stack__stack:nth-child(137) {
-      z-index: 63; }
-    .coin-stack__stack:nth-child(138) {
-      z-index: 62; }
-    .coin-stack__stack:nth-child(139) {
-      z-index: 61; }
-    .coin-stack__stack:nth-child(140) {
-      z-index: 60; }
-    .coin-stack__stack:nth-child(141) {
-      z-index: 59; }
-    .coin-stack__stack:nth-child(142) {
-      z-index: 58; }
-    .coin-stack__stack:nth-child(143) {
-      z-index: 57; }
-    .coin-stack__stack:nth-child(144) {
-      z-index: 56; }
-    .coin-stack__stack:nth-child(145) {
-      z-index: 55; }
-    .coin-stack__stack:nth-child(146) {
-      z-index: 54; }
-    .coin-stack__stack:nth-child(147) {
-      z-index: 53; }
-    .coin-stack__stack:nth-child(148) {
-      z-index: 52; }
-    .coin-stack__stack:nth-child(149) {
-      z-index: 51; }
-    .coin-stack__stack:nth-child(150) {
-      z-index: 50; }
-    .coin-stack__stack:nth-child(151) {
-      z-index: 49; }
-    .coin-stack__stack:nth-child(152) {
-      z-index: 48; }
-    .coin-stack__stack:nth-child(153) {
-      z-index: 47; }
-    .coin-stack__stack:nth-child(154) {
-      z-index: 46; }
-    .coin-stack__stack:nth-child(155) {
-      z-index: 45; }
-    .coin-stack__stack:nth-child(156) {
-      z-index: 44; }
-    .coin-stack__stack:nth-child(157) {
-      z-index: 43; }
-    .coin-stack__stack:nth-child(158) {
-      z-index: 42; }
-    .coin-stack__stack:nth-child(159) {
-      z-index: 41; }
-    .coin-stack__stack:nth-child(160) {
-      z-index: 40; }
-    .coin-stack__stack:nth-child(161) {
-      z-index: 39; }
-    .coin-stack__stack:nth-child(162) {
-      z-index: 38; }
-    .coin-stack__stack:nth-child(163) {
-      z-index: 37; }
-    .coin-stack__stack:nth-child(164) {
-      z-index: 36; }
-    .coin-stack__stack:nth-child(165) {
-      z-index: 35; }
-    .coin-stack__stack:nth-child(166) {
-      z-index: 34; }
-    .coin-stack__stack:nth-child(167) {
-      z-index: 33; }
-    .coin-stack__stack:nth-child(168) {
-      z-index: 32; }
-    .coin-stack__stack:nth-child(169) {
-      z-index: 31; }
-    .coin-stack__stack:nth-child(170) {
-      z-index: 30; }
-    .coin-stack__stack:nth-child(171) {
-      z-index: 29; }
-    .coin-stack__stack:nth-child(172) {
-      z-index: 28; }
-    .coin-stack__stack:nth-child(173) {
-      z-index: 27; }
-    .coin-stack__stack:nth-child(174) {
-      z-index: 26; }
-    .coin-stack__stack:nth-child(175) {
-      z-index: 25; }
-    .coin-stack__stack:nth-child(176) {
-      z-index: 24; }
-    .coin-stack__stack:nth-child(177) {
-      z-index: 23; }
-    .coin-stack__stack:nth-child(178) {
-      z-index: 22; }
-    .coin-stack__stack:nth-child(179) {
-      z-index: 21; }
-    .coin-stack__stack:nth-child(180) {
-      z-index: 20; }
-    .coin-stack__stack:nth-child(181) {
-      z-index: 19; }
-    .coin-stack__stack:nth-child(182) {
-      z-index: 18; }
-    .coin-stack__stack:nth-child(183) {
-      z-index: 17; }
-    .coin-stack__stack:nth-child(184) {
-      z-index: 16; }
-    .coin-stack__stack:nth-child(185) {
-      z-index: 15; }
-    .coin-stack__stack:nth-child(186) {
-      z-index: 14; }
-    .coin-stack__stack:nth-child(187) {
-      z-index: 13; }
-    .coin-stack__stack:nth-child(188) {
-      z-index: 12; }
-    .coin-stack__stack:nth-child(189) {
-      z-index: 11; }
-    .coin-stack__stack:nth-child(190) {
-      z-index: 10; }
-    .coin-stack__stack:nth-child(191) {
-      z-index: 9; }
-    .coin-stack__stack:nth-child(192) {
-      z-index: 8; }
-    .coin-stack__stack:nth-child(193) {
-      z-index: 7; }
-    .coin-stack__stack:nth-child(194) {
-      z-index: 6; }
-    .coin-stack__stack:nth-child(195) {
-      z-index: 5; }
-    .coin-stack__stack:nth-child(196) {
-      z-index: 4; }
-    .coin-stack__stack:nth-child(197) {
-      z-index: 3; }
-    .coin-stack__stack:nth-child(198) {
-      z-index: 2; }
-    .coin-stack__stack:nth-child(199) {
-      z-index: 1; }
-    .coin-stack__stack:nth-child(200) {
-      z-index: 0; }
     .coin-stack__stack:after {
       content: '';
       background-image: radial-gradient(rgba(0, 0, 0, 0.2), transparent 80%);
