--- a/src/Style/Views/Charts/CoinStack.scss
+++ b/src/Style/Views/Charts/CoinStack.scss
@@ -22,7 +22,13 @@
         background-size: 100% auto;
         background-image: url('../img/coin.png');
     }
-    
+   
+    &__coins {
+        position: absolute;
+        bottom: 0;
+        left: calc(50% - 50px);
+    }
+
     &__stack {
         height: 100%;
         position: absolute;
@@ -30,12 +36,6 @@
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
-
-        @for $i from 1 through 200 {
-            &:nth-child(#{$i}) {
-                z-index: #{200 - $i};
-            }
-        }
 
         &:after {
             content: '';
